fix education icon spacing

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -223,15 +223,21 @@ nav{
     text-align: center;
     // width: 100vw;
   }
+  .education-row {
+    @media screen and (min-width: $break-large) {
+      display: flex;
+      flex-direction: column;
+      img{
+
+      }
+    }
+  }
   .education-tech-icons {
     display: flex;
     flex-direction: column;
-    // align-items: center;
     justify-content: center;
     @media screen and (min-width: $break-large) {
       flex-direction: row;
-      // align-items: center;
-      // margin-bottom: 100px;
     }
   }
   .additional-skills{
@@ -267,6 +273,14 @@ nav{
     margin: 5px;
     @media screen and (min-width: $break-medium){
       height: 3.5em;
+    }
+    @media screen and (min-width: $break-large) {
+      height: 4.5em;
+    }
+  }
+  .education-row > img.about-icon:nth-child(n+2) {
+    @media screen and (min-width: $break-large) {
+      width: 6em;
     }
   }
 }
